#AP-2465 sidemenu are not clickable,AP-2467 collapse,exapand capitalize initial letter,#AP-2468 org property name in two lines resolved,#AP-2494 side menu links not working when visit workflow page,#AP-2493 toast message not display when sidemenu expanded,#AP-2488 side menu links not highlighted when user navigate from top menu,#AP-2487 horizontal scrollbar appear for banner config page when side menu expanded,#AP-2486 sidemenu banner config breadcrubm not visible,#AP-2485 banner config page label visible, overlap on sidemenu,#AP-2484 sidemenu user routed to old cookie banner after click cookie banner

--- a/src/app/_components/layout/header/header.component.scss
+++ b/src/app/_components/layout/header/header.component.scss
@@ -1181,3 +1181,27 @@ a.nav-link.dropdown-link span.rounded-circle {
   border: 1px solid #ffffff;
   box-shadow: 0px 0px 5px #ffffff;
 }
+
+.fontsize-16{
+  font-size: 16px;
+}
+
+.webformicon{
+  display: flex;
+}
+
+.webformicon:hover {
+  color:#0168fa;
+}
+
+.webform-icon {
+  background: url('../../../../assets/imgs/webform-icon.svg') no-repeat;
+  display: inline-block;
+  margin-right: 15px;
+  padding-left: 30px;
+  color:#333333;
+}
+
+.webform-icon:hover {
+  filter: invert(23%) sepia(100%) saturate(2212%) hue-rotate(208deg) brightness(102%) contrast(110%);
+}
